# pytest-fahhh

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tox.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml
src/pytest_fahhh/: __init__.py  plugin.py
tests/: smoke_check.py  test_manual_sound_demo.py  test_plugin.py
